ご注意事項セクションの装飾を削除してシンプルに

--- a/mockup-fee.html
+++ b/mockup-fee.html
@@ -449,21 +449,14 @@
 
         /* 注意事項 */
         .notice-section {
-            background: #fff8f0;
-            border: 2px solid #ff6b35;
-            border-radius: 15px;
-            padding: 30px;
             margin: 40px 0;
         }
 
         .notice-title {
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 400;
             color: #333;
-            margin-bottom: 20px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
+            margin-bottom: 15px;
         }
 
         .notice-list {
@@ -471,9 +464,9 @@
         }
 
         .notice-item {
-            padding: 10px 0;
+            padding: 8px 0;
             color: #666;
-            padding-left: 25px;
+            padding-left: 20px;
             position: relative;
         }
 
@@ -481,7 +474,7 @@
             content: '※';
             position: absolute;
             left: 0;
-            color: #ff6b35;
+            color: #666;
         }
 
         /* CTAセクション */
@@ -793,7 +786,7 @@
             </div>
 
             <div class="notice-section">
-                <h3 class="notice-title">⚠️ ご注意事項</h3>
+                <h3 class="notice-title">ご注意事項</h3>
                 <ul class="notice-list">
                     <li class="notice-item">回収額には、残業代本体のほか、遅延損害金等も含まれます。</li>
                     <li class="notice-item">訴訟段階に移行した場合、最終的に訴訟報酬率で精算し、交渉段階で受領済みの報酬がある場合は差額のみをいただきます。</li>
@@ -856,8 +849,6 @@
         </div>
     </section>
 
-<<<<<<< Current (Your changes)
-<<<<<<< Current (Your changes)
     <!-- 比較テーブル -->
     <section class="comparison-section">
         <div class="comparison-inner">
@@ -913,10 +904,6 @@
         </div>
     </section>
 
-=======
->>>>>>> Incoming (Background Agent changes)
-=======
->>>>>>> Incoming (Background Agent changes)
     <!-- CTAセクション -->
     <section class="cta-section">
         <div class="cta-content">
