--- a/モックアップ/mockup-fee.html
+++ b/モックアップ/mockup-fee.html
@@ -465,11 +465,34 @@
             font-weight: 900;
             color: #fff;
             margin-bottom: 20px;
+            padding-bottom: 0 !important;
             border: none !important;
             border-bottom: none !important;
             border-top: none !important;
+            border-left: none !important;
+            border-right: none !important;
+            outline: none !important;
             text-decoration: none !important;
             box-shadow: none !important;
+            background: none !important;
+            background-image: none !important;
+        }
+
+        /* h2タグへの直接スタイル適用（SWELLテーマ対策） */
+        .cta-section h2.cta-title {
+            border: none !important;
+            border-bottom: none !important;
+            padding-bottom: 0 !important;
+            background: none !important;
+            box-shadow: none !important;
+        }
+
+        /* 疑似要素の削除（SWELLの装飾対策） */
+        .cta-title::before,
+        .cta-title::after {
+            display: none !important;
+            content: none !important;
+            border: none !important;
             background: none !important;
         }
 
